[gd_scene load_steps=7 format=3 uid="uid://bljyb4i1le8k7"]

[ext_resource type="Script" path="res://scripts/2p/main_menu.gd" id="1_yq35c"]
[ext_resource type="Texture2D" uid="uid://ckd7fut3ex0k0" path="res://assets/wood_background.jpg" id="2_qlg1g"]
[ext_resource type="FontFile" uid="uid://cksbyujvq876h" path="res://assets/pixel_font.ttf" id="2_v2aic"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2g4q"]
bg_color = Color(0, 0, 0, 0.5)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(100, 100, 100, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_86wvy"]
bg_color = Color(0, 0, 0, 0.501961)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0, 0, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37ll1"]
bg_color = Color(0, 0, 0, 0.5)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.01323)
script = ExtResource("1_yq35c")

[node name="WoodBackground" type="Sprite2D" parent="."]
position = Vector2(960, 533.906)
scale = Vector2(1, 1.03905)
texture = ExtResource("2_qlg1g")

[node name="Headline" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.118519
anchor_right = 1.0
anchor_bottom = 0.164815
offset_left = -2.0
offset_top = 1.28899
offset_right = -2.0
offset_bottom = 51.2893
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 100
text = "SQUONG"
horizontal_alignment = 1

[node name="Highscore_Headline" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.777778
anchor_right = 1.0
anchor_bottom = 0.824074
offset_left = -2.0
offset_top = -82.0288
offset_right = -2.0
offset_bottom = -82.0278
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 50
text = "Highscore"
horizontal_alignment = 1

[node name="Highscore_Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.866667
anchor_right = 1.0
anchor_bottom = 0.912963
offset_left = -2.0
offset_top = -82.0288
offset_right = -2.0
offset_bottom = -82.0278
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="Points_Headline" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.777778
anchor_right = 1.0
anchor_bottom = 0.824074
offset_top = 82.7913
offset_right = -1280.0
offset_bottom = 82.7916
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 25
text = "Points earned"
horizontal_alignment = 1

[node name="Points_Score" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.866667
anchor_right = 1.0
anchor_bottom = 0.912963
offset_top = 32.0126
offset_right = -1280.0
offset_bottom = 32.0129
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="Time_Headline" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.777778
anchor_right = 1.0
anchor_bottom = 0.824074
offset_left = 643.0
offset_top = 82.7913
offset_right = -637.0
offset_bottom = 82.7916
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 25
text = "Time played"
horizontal_alignment = 1

[node name="Time_time" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.866667
anchor_right = 1.0
anchor_bottom = 0.912963
offset_left = 643.0
offset_top = 32.0126
offset_right = -637.0
offset_bottom = 32.0129
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="Lost_Headline" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.777778
anchor_right = 1.0
anchor_bottom = 0.824074
offset_left = 1277.0
offset_top = 82.7913
offset_right = -3.0
offset_bottom = 82.7916
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 25
text = "Games lost"
horizontal_alignment = 1

[node name="Lost_Score" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.866667
anchor_right = 1.0
anchor_bottom = 0.912963
offset_left = 1277.0
offset_top = 32.0126
offset_right = -3.0
offset_bottom = 32.0129
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.345833
anchor_top = 0.258776
anchor_right = 0.654167
anchor_bottom = 0.577294
offset_left = -2.0
offset_top = 46.3862
offset_right = -2.0
offset_bottom = 46.3862
grow_horizontal = 2
grow_vertical = 2

[node name="GameStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_m2g4q")
text = "Game Start"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_86wvy")
theme_override_constants/modulate_arrow = 4
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "2 Player"
popup/item_1/text = "3 Player"
popup/item_1/id = 1

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_v2aic")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_37ll1")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/GameStart" to="." method="_on_game_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
